--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -184,7 +184,7 @@
                   <td></td>
                   <td class="compare-checkbox align-middle"><input type="checkbox" name="{{row[1]}}"></td>
                   <td class="align-middle"><button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#acceptRecModal" 
-                    onclick="idx={{row[0]-1}};document.getElementById('acceptRecModalLabel').innerHTML='Accept Recommendation '+idx;return false;">
+                    onclick="idx={{row[0]-1}};document.getElementById('acceptRecModalLabel').innerHTML='Accept Recommendation '+(idx+1);return false;">
                     Accept
                   </button></td>
                 </tr>
