--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -9,6 +9,11 @@
 <br><br>
 <html>
     <head>
+        <link href="{{ url_for('static', filename='vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='vendor/boxicons/css/boxicons.min.css') }}" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/patient.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
         <script type="text/javascript">
             let patient_id = null;
             function removePatient(idx) {
@@ -22,6 +27,20 @@
     
     </br>
     </br>
+        <div id="mySidenav" class="sidenav">
+            <a id="home" href="{{ url_for('index') }}">
+            <div class="icon"><i class=" ri-home-heart-line" style="font-size:x-large;"></i></div>
+            Home
+            </a>
+            <a id="patients-list" href="{{ url_for('discharge') }}">
+            <div class="icon"><i class="ri-list-check-2" style="font-size:x-large;"></i></div>
+            Patients
+            </a>
+            <a id="find-agency" href="{{ url_for('zipcode_search') }}">
+            <div class="icon"><i class="ri-hospital-line" style="font-size:x-large;"></i></div>
+            Agency
+            </a>
+        </div>
         <div class="container">
             <div class="header">
                 <h3 class="agency-head" style="font-family:arial;color:#094d41"><b>Patients for: {{username | title}}</b></h3>
