--- a/code/app/templates/patienttest.html
+++ b/code/app/templates/patienttest.html
@@ -1,72 +1,44 @@
 {% extends "headerbase.html" %}
 {% block content %}
+<br><br>
 <html>
 
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-<!--     <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/patient.css') }}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/discharge.css') }}">
+  <head>
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+      
 
-    <script type="text/javascript">
-        let patient_id = {{ patient.id }};
-        function removeRec(idx) {
-          $.post("{{url_for('change_rec_status')}}", { idx: idx, status: "R", patient_id: patient_id }, function (response) {
-            location.reload();
-          })
-        }
-        function requestRec(idx) {
-          $.post("{{url_for('request_rec')}}", { idx: idx, patient_id: patient_id }, function (response) {
-            location.reload();
-          })
-        }
-    </script>
-    </head>
+      
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/patient.css') }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+  <script type="text/javascript">
+    let patient_id = {{ patient.id }};
+    function removeRec(idx) {
+      $.post("{{url_for('change_rec_status')}}", { idx: idx, status: "R", patient_id: patient_id }, function (response) {
+        location.reload();
+      })
+    }
+    function requestRec(idx) {
+      $.post("{{url_for('request_rec')}}", { idx: idx, patient_id: patient_id }, function (response) {
+        location.reload();
+      })
+    }
+  </script>
+</head>
 
 <body>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap.min.js"></script><br><br>
-    <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script><br><br>
-
+    <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <div class="container">
-      <div class="header">
-<!--         <h3 class="text-muted"> -->
-<!--             <div><a href="{{ url_for('discharge') }}" class="btn-two blue rounded small" style='left:10'>All Patients</a></div> -->
-            
-<!--             <center> -->
-            <div class="row" style = 'width:100%; height:15%'>
-                <div class = "col-md-2">
-                    <a href="{{ url_for('discharge') }}" style='float:left' class="btn-two blue rounded small" style='left:10'>All Patients</a>
-                </div>
-                <div class="col-md-6">
-                    <div class="card-body"><br><br>
-                        <br><br>
-                        <h1 class = 'display-5' style="font-family:Lato;font-weight:400;color:#094d41;text-align:left">{{patient.first | title}}'s Recommendations</h1><br><br>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <br><br>
-                    <img src="{{ url_for('static', filename='more-med-char.png') }}" height="100%" class="card-img-right"><br>
-                </div>
-                <div class="col-sm-12">
-                    <br><br>
-                    <div style='border-bottom:1px solid #ccc;'></div>
-                </div>
+      <div class="header"><br>
+        <h3 class="text-muted">
+            <div>
+              <a href="{{ url_for('discharge') }}" class="btn btn-primary">Patients List</a>
             </div>
-<!--         </center>
-             -->
-<!--             <div align="center" style="color:#211F1F;font-size:35px">
+            <div align="center" style="color:#211F1F;font-size:35px">
                 <strong>{{patient.first}}'s recommendations:</strong>
-            </div> -->
-          <br><br><br>
-            <br>
+            </div>
             <div align="left" style="color:#211F1F;font-size:22px">
-            <br>Below are top 20 agencies for {{patient.first}} that serve <p style="display:inline;color:#376b69;font-family:Lato;font-weight:400"><strong>{{patient.zipcode}}</strong></p> and offer
+            <br>Below are top 20 agencies for {{patient.first}} that serve <p style="display:inline;color:#376b69"><strong>{{patient.zipcode}}</strong></p> and offer
             {% if specific_services|length == 1 %}
                 <p style="display:inline;color:#376b69"><strong>{{specific_services[0]}}</strong></p>.
             {% elif specific_services|length == 2 %}
@@ -78,28 +50,28 @@
                     and <p style="display:inline;color:#376b69"><strong>{{specific_services[-1]}}</strong></p>.
             {% endif %}
             </div>
-            <br><br>
-<!--           </h3> -->
+            <br>
+          </h3>
       </div>
       <ul class="nav nav-tabs" id="status" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="available-tab" style = 'color:#25787a' data-bs-toggle="tab" data-bs-target="#available"
+          <button class="nav-link active" id="available-tab" data-bs-toggle="tab" data-bs-target="#available"
             type="button" role="tab" aria-controls="available" aria-selected="true">Available</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="requested-tab" style = 'color:#25787a' data-bs-toggle="tab" data-bs-target="#requested" type="button"
+          <button class="nav-link" id="requested-tab" data-bs-toggle="tab" data-bs-target="#requested" type="button"
             role="tab" aria-controls="requested" aria-selected="false">Requested</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="confirmed-tab" style = 'color:#25787a' data-bs-toggle="tab" data-bs-target="#confirmed" type="button"
+          <button class="nav-link" id="confirmed-tab" data-bs-toggle="tab" data-bs-target="#confirmed" type="button"
             role="tab" aria-controls="confirmed" aria-selected="false">Confirmed</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="denied-tab" style = 'color:#25787a' data-bs-toggle="tab" data-bs-target="#denied" type="button"
+          <button class="nav-link" id="denied-tab" data-bs-toggle="tab" data-bs-target="#denied" type="button"
             role="tab" aria-controls="denied" aria-selected="false">Denied</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="removed-tab" style = 'color:#25787a' data-bs-toggle="tab" data-bs-target="#removed" type="button"
+          <button class="nav-link" id="removed-tab" data-bs-toggle="tab" data-bs-target="#removed" type="button"
             role="tab" aria-controls="removed" aria-selected="false">Removed</button>
         </li>
       </ul>
@@ -112,8 +84,7 @@
           <form method="POST">
             <div class="row">
               <div class="container col-md-12 compare-table">
-                  <br>
-                <table id="myTable1" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+                <table class="display table-striped table-bordered nowrap responsive" style="width: 100%">
                   <thead>
                     <tr>
                       {% for col_name in columns %}
@@ -121,7 +92,7 @@
                       {% endfor %}
                       <th></th>
                       <th></th>
-                      <th class="compare-button"><button type="submit" name="compare" id ="compare-btn" class="btn-two blue rounded small">Compare</button></th>
+                      <th class="compare-button"><button type="submit" name="compare" id ="compare-btn" class="btn btn-primary">Compare</button></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -129,17 +100,18 @@
                     <tr>
                       
                       {% for cell in row %}
-                      <td style="vertical-align: middle;">{{cell|title}}</td>
+                      <td style="vertical-align: middle;">{{cell}}</td>
                       {% endfor %}
-                      <td><button type="button" class="btn-two green rounded small" style="vertical-align: middle;" onclick="requestRec('{{row[0]-1}}');">
+                      <td><button type="button" class="btn btn-success" style="vertical-align: middle;" onclick="requestRec('{{row[0]-1}}');">
                         Request
                       </button></td>
-                      <td width = '5%'><button type="button" class="btn-two red rounded small" onclick="removeRec('{{row[0]-1}}');">
+                      <td><button type="button" class="btn btn-warning" style="vertical-align: middle;" onclick="removeRec('{{row[0]-1}}');">
                         <i class="bi bi-trash"></i>
                       </button></td>
                       <td class="compare-checkbox"><input type="checkbox" name="{{row[1]}}"></td>
 
                     </tr>
+                      
                     {% endfor %}
                   </tbody>
                 </table>
@@ -154,14 +126,14 @@
         <div class="tab-pane" id="requested" role="tabpanel" aria-labelledby="requested-tab">
           <form method="POST">
             <div class="container">
-              <table id="myTable2" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+              <table class="display table-striped table-bordered nowrap responsive" style="width: 100%">
                 <thead>
                   <tr>
                     {% for col_name in columns %}
                     <th scope="col">{{col_name}}</th>
                     {% endfor %}
                     <th></th>
-                    <th class="compare-button"><button type="submit" name="compare" class="btn-two blue small">Compare</button></th>
+                    <th class="compare-button"><button type="submit" name="compare" class="btn btn-primary">Compare</button></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -182,7 +154,7 @@
         <!-- Confirmed Pane -->
         <div class="tab-pane" id="confirmed" role="tabpanel" aria-labelledby="confirmed-tab">
           <div class="container">
-            <table id="myTable3" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+            <table class="display table-striped table-bordered nowrap responsive" style="width: 100%">
               <thead>
                 <tr>
                   {% for col_name in columns %}
@@ -205,7 +177,7 @@
         <!-- Denied Pane -->
         <div class="tab-pane" id="denied" role="tabpanel" aria-labelledby="denied-tab">
           <div class="container">
-            <table id="myTable4" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+            <table class="display table-striped table-bordered nowrap responsive" style="width: 100%">
               <thead>
                 <tr>
                   {% for col_name in columns %}
@@ -228,7 +200,7 @@
         <!-- Removed Pane -->
         <div class="tab-pane" id="removed" role="tabpanel" aria-labelledby="removed-tab">
           <div class="container">
-            <table id="myTable5" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+            <table class="display table-striped table-bordered nowrap responsive" style="width: 100%">
               <thead>
                 <tr>
                   {% for col_name in columns %}
@@ -251,26 +223,28 @@
       </div>
 
     </div>
-    <link href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css" rel="stylesheet">
 </body>
+
+<script type="text/javascript">
+$('.display').DataTable({
+  responsive: true,
+    autoWidth : true,
+    "fnInitComplete": function(oSettings) {
+                        $( window ).resize();
+                    },
+
+ "fnDrawCallback": function(oSettings) {
+      $( window ).trigger('resize');
+    }
+});
+$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+  $($.fn.dataTable.tables(true)).DataTable().columns.adjust().responsive.recalc();
+});   
     
-<script>
-    $('.display').DataTable({
-      responsive: false,
-        "bPaginate": false,
-        "bLengthChange": false,
-        "bFilter": true,
-        "bInfo": false,
-        columnDefs: [
-           { orderable: false, targets: [-1, -2, -3]}
-        ]
-        });
-        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-          $($.fn.dataTable.tables(true)).DataTable().columns.adjust().responsive.recalc();
-        });    
+    </script>
 
-</script>
+    
 </html>
-{% endblock %}
 
+
+{% endblock %}
